--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Gestion-des-patients
+server.port=8084
+spring.datasource.url=jdbc:h2:mem:patients-db
+spring.h2.console.enabled=true
